# SLoAn

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SLoAn.cpp  SLoAn.h  anagram.drawio.xml  anagram.sln  data.cpp  data.h  keynode.cpp  keynode.h  keytree.cpp  keytree.h  solution.cpp  solution.h
UnitTests/: CMakeLists.txt  UnitTests.cpp  UnitTests.vcxproj
anagram/: .gitignore  CMakeLists.txt  RCa09300  SLoAn.cpp  SLoAn.h  anagram.cpp  anagram.sln  anagram.vcxproj  anagram.vcxproj.filters  data.cpp  data.h  hashmap.cpp  hashmap.h  keynode.cpp  keynode.h  keytree.cpp  keytree.h  resource.h
